--- a/fixtures/vcr_cassettes/PubmedSourceRecord/_get_pubmed_record_from_pubmed/returns_an_instance_of_PubmedSourceRecord.yml
+++ b/fixtures/vcr_cassettes/PubmedSourceRecord/_get_pubmed_record_from_pubmed/returns_an_instance_of_PubmedSourceRecord.yml
@@ -130,4 +130,159 @@ http_interactions:
         </PubmedArticleSet>
     http_version: 
   recorded_at: Thu, 02 Jun 2016 22:13:06 GMT
+- request:
+    method: post
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+    body:
+      encoding: UTF-8
+      string: "&id=&id=10000166"
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Accept:
+      - "*/*"
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Thu, 10 Nov 2016 18:40:41 GMT
+      Content-Type:
+      - application/x-www-form-urlencoded
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 10 Nov 2016 18:40:37 GMT
+      Server:
+      - Apache
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
+      Content-Security-Policy-Report-Only:
+      - 'default-src https:; script-src https: ''unsafe-inline'' ''unsafe-eval'';
+        font-src https: data:; img-src https: data:; style-src https: ''unsafe-inline'';
+        report-uri https://www.ncbi.nlm.nih.gov/corecgi/csp/csp.cgi'
+      Access-Control-Allow-Origin:
+      - "*"
+      Cache-Control:
+      - private
+      Ncbi-Phid:
+      - 03ED7E9F824B92810000000001AE01A9
+      Ncbi-Sid:
+      - 03ED7E9F824BF251_0430SID
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Set-Cookie:
+      - ncbi_sid=03ED7E9F824BF251_0430SID; domain=.nih.gov; path=/; expires=Fri, 10
+        Nov 2017 18:40:37 GMT
+      Vary:
+      - Accept-Encoding
+      Content-Encoding:
+      - gzip
+      X-Ua-Compatible:
+      - IE=Edge
+      X-Xss-Protection:
+      - 1; mode=block
+      Content-Length:
+      - '1002'
+    body:
+      encoding: UTF-8
+      string: |
+        <?xml version="1.0" ?>
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2016//EN" "https://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
+        <PubmedArticleSet>
+        <PubmedArticle>
+            <MedlineCitation Status="Publisher" Owner="NLM">
+                <PMID Version="1">10000166</PMID>
+                <DateCreated>
+                    <Year>1999</Year>
+                    <Month>2</Month>
+                    <Day>17</Day>
+                </DateCreated>
+                <DateRevised>
+                    <Year>1999</Year>
+                    <Month>2</Month>
+                    <Day>17</Day>
+                </DateRevised>
+                <Article PubModel="Print">
+                    <Journal>
+                        <ISSN IssnType="Print">0163-1829</ISSN>
+                        <JournalIssue CitedMedium="Print">
+                            <Volume>45</Volume>
+                            <Issue>1</Issue>
+                            <PubDate>
+                                <Year>1992</Year>
+                                <Month>Jan</Month>
+                                <Day>1</Day>
+                            </PubDate>
+                        </JournalIssue>
+                        <Title>Physical review. B, Condensed matter</Title>
+                        <ISOAbbreviation>Phys. Rev., B Condens. Matter</ISOAbbreviation>
+                    </Journal>
+                    <ArticleTitle>Fluid permeability in porous media: Comparison of electrical estimates with hydrodynamical calculations.</ArticleTitle>
+                    <Pagination>
+                        <MedlinePgn>186-195</MedlinePgn>
+                    </Pagination>
+                    <AuthorList CompleteYN="Y">
+                        <Author ValidYN="Y">
+                            <LastName>Kostek</LastName>
+                            <Initials>S</Initials>
+                        </Author>
+                        <Author ValidYN="Y">
+                            <LastName>Schwartz</LastName>
+                            <Initials>LM</Initials>
+                        </Author>
+                        <Author ValidYN="Y">
+                            <LastName>Johnson</LastName>
+                            <Initials>DL</Initials>
+                        </Author>
+                    </AuthorList>
+                    <Language>ENG</Language>
+                    <PublicationTypeList>
+                        <PublicationType UI="">JOURNAL ARTICLE</PublicationType>
+                    </PublicationTypeList>
+                </Article>
+                <MedlineJournalInfo>
+                    <Country>United States</Country>
+                    <MedlineTA>Phys Rev B Condens Matter</MedlineTA>
+                    <NlmUniqueID>9878217</NlmUniqueID>
+                    <ISSNLinking>0163-1829</ISSNLinking>
+                </MedlineJournalInfo>
+            </MedlineCitation>
+            <PubmedData>
+                <History>
+                    <PubMedPubDate PubStatus="pubmed">
+                        <Year>1992</Year>
+                        <Month>1</Month>
+                        <Day>1</Day>
+                        <Hour>0</Hour>
+                        <Minute>0</Minute>
+                    </PubMedPubDate>
+                    <PubMedPubDate PubStatus="medline">
+                        <Year>1999</Year>
+                        <Month>2</Month>
+                        <Day>19</Day>
+                        <Hour>0</Hour>
+                        <Minute>0</Minute>
+                    </PubMedPubDate>
+                    <PubMedPubDate PubStatus="entrez">
+                        <Year>1992</Year>
+                        <Month>1</Month>
+                        <Day>1</Day>
+                        <Hour>0</Hour>
+                        <Minute>0</Minute>
+                    </PubMedPubDate>
+                </History>
+                <PublicationStatus>ppublish</PublicationStatus>
+                <ArticleIdList>
+                    <ArticleId IdType="pubmed">10000166</ArticleId>
+                </ArticleIdList>
+            </PubmedData>
+        </PubmedArticle>
+
+        </PubmedArticleSet>
+    http_version: 
+  recorded_at: Thu, 10 Nov 2016 18:40:42 GMT
 recorded_with: VCR 3.0.1
