add a new method to repull pubmed record so we can update our source; add a rake task to repull all pubmed records for given cap_profile_ids and then update the pub_hash

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -66,6 +66,7 @@ Performance/RangeInclude:
 RSpec/AnyInstance:
   Exclude:
     - 'spec/models/publication_spec.rb'
+    - 'spec/models/pubmed_source_record_spec.rb'
 
 # Offense count: 49
 RSpec/DescribedClass:
