Start testing ruby 2.4.1 also in Travis
Be slightly forward looking. Allow failure for now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: ruby
 cache: bundler
 rvm:
   - 2.3.4
+  - 2.4.1
 sudo: false
 script: bundle exec rake ci
-services: mysql 
+services: mysql
+matrix:
+  allow_failures:
+    - rvm: 2.4.1
