Rakefile's turn for cleanup
- use `.rspec` to filter out vendor integration tests (this allows `rspec`
  to work as expected from the command-line)
- don't protect the load attempt for rubocop per RAILS_ENV: there's no
  point, we already rescue the load error and you should be able to run
  rubocop-via-rake anywhere it successfully loads.  On that note: we
  have a subsequent task that unilaterally expects a `rubocop` executable
  on the system, so it obviously isn't important anyway.  **emoji_shrug**
- Create the DB in `before_script`, use `db:setup` not `db:migrate`
- HAVE A REASONABLE DEFAULT TASK, namely `:ci`

End result: a better `Rakefile`, better `rspec` behavior, better travis
config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
+sudo: false
 language: ruby
 cache: bundler
 rvm:
   - 2.3.4
   - 2.4.1
-sudo: false
-script: bundle exec rake ci
 services: mysql
+script: bundle exec rake ci
+before_script:
+  - bundle exec rake db:create
 matrix:
   allow_failures:
     - rvm: 2.4.1
