WOS provenance setting

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -85,15 +85,12 @@ sul_doc_types:
   book: book
   article: article
 
-cap_provenance: cap
-
-manual_source: manual
-
-sciencewire_source: sciencewire
-
-pubmed_source: pubmed
-
 batch_source: batch
+cap_provenance: cap
+manual_source: manual
+pubmed_source: pubmed
+sciencewire_source: sciencewire
+wos_source: wos
 
 sw_doc_types_to_skip:
   - Book Review
