--- a/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/does_not_do_any_filtering_with_a_resultset_of_2_manual/batch_pubs.yml
+++ b/fixtures/vcr_cassettes/PubmedHarvester/_search_all_sources_by_pmid/mix_of_local_plus_SW/pubmed_results/does_not_do_any_filtering_with_a_resultset_of_2_manual/batch_pubs.yml
@@ -31,13 +31,13 @@ http_interactions:
             </ScienceWireQueryXMLParameter>
     headers:
       User-Agent:
-      - Faraday v0.9.2
+      - Faraday v0.13.1
       Accept:
       - "*/*"
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:09:56 GMT
+      - Mon, 13 Nov 2017 20:58:04 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,7 +66,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 22:09:57 GMT
+      - Mon, 13 Nov 2017 20:58:57 GMT
       Content-Length:
       - '278'
     body:
@@ -75,53 +75,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>143802</queryID>\r\n
         \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:09:57 GMT
-- request:
-    method: post
-    uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
-    body:
-      encoding: UTF-8
-      string: "&id=99999999"
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Thu, 02 Jun 2016 22:09:57 GMT
-      Server:
-      - Apache
-      Access-Control-Allow-Origin:
-      - "*"
-      Cache-Control:
-      - private
-      Ncbi-Sid:
-      - 08DD446A750AEB51_0319SID
-      Content-Type:
-      - text/xml; charset=UTF-8
-      Set-Cookie:
-      - ncbi_sid=08DD446A750AEB51_0319SID; domain=.nih.gov; path=/; expires=Fri, 02
-        Jun 2017 22:09:57 GMT
-      X-Ua-Compatible:
-      - IE=Edge
-      Transfer-Encoding:
-      - chunked
-    body:
-      encoding: UTF-8
-      string: |
-        <?xml version="1.0"?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2016//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
-        <PubmedArticleSet>
-        </PubmedArticleSet>
-    http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:09:59 GMT
+  recorded_at: Mon, 13 Nov 2017 20:58:04 GMT
 - request:
     method: post
     uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -130,15 +84,13 @@ http_interactions:
       string: "&id=99999999"
     headers:
       User-Agent:
-      - Faraday v0.9.2
+      - Faraday v0.13.1
       Accept:
       - "*/*"
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 20 Oct 2016 21:46:38 GMT
-      Host:
-      - eutils.ncbi.nlm.nih.gov
+      - Mon, 13 Nov 2017 20:58:04 GMT
       Content-Type:
       - application/x-www-form-urlencoded
   response:
@@ -147,30 +99,26 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 20 Oct 2016 21:46:38 GMT
+      - Mon, 13 Nov 2017 20:58:58 GMT
       Server:
       - Apache
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains; preload
       Content-Security-Policy:
       - upgrade-insecure-requests
-      Content-Security-Policy-Report-Only:
-      - 'default-src https:; script-src https: ''unsafe-inline'' ''unsafe-eval'';
-        font-src https: data:; img-src https: data:; style-src https: ''unsafe-inline'';
-        report-uri https://www.ncbi.nlm.nih.gov/corecgi/csp/csp.cgi'
       Access-Control-Allow-Origin:
       - "*"
       Cache-Control:
       - private
       Ncbi-Phid:
-      - 03EE0EB480938D7100000000011F011C
+      - 990D457CA0A020910000000001F001EC
       Ncbi-Sid:
-      - 03EE0EB48093B3E1_0287SID
+      - 990D457CA0A07921_0496SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=03EE0EB48093B3E1_0287SID; domain=.nih.gov; path=/; expires=Fri, 20
-        Oct 2017 21:46:38 GMT
+      - ncbi_sid=990D457CA0A07921_0496SID; domain=.nih.gov; path=/; expires=Tue, 13
+        Nov 2018 20:58:58 GMT
       Vary:
       - Accept-Encoding
       Content-Encoding:
@@ -180,14 +128,14 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       Content-Length:
-      - '183'
+      - '175'
     body:
       encoding: UTF-8
-      string: |
+      string: |-
         <?xml version="1.0" ?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2016//EN" "https://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2017//EN" "https://dtd.nlm.nih.gov/ncbi/pubmed/out/pubmed_170101.dtd">
         <PubmedArticleSet>
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Thu, 20 Oct 2016 21:46:38 GMT
+  recorded_at: Mon, 13 Nov 2017 20:58:05 GMT
 recorded_with: VCR 3.0.1
