--- a/fixtures/vcr_cassettes/PubmedSourceRecord/_get_pubmed_record_from_pubmed/extracts_fields_-_pmid.yml
+++ b/fixtures/vcr_cassettes/PubmedSourceRecord/_get_pubmed_record_from_pubmed/extracts_fields_-_pmid.yml
@@ -2,149 +2,19 @@
 http_interactions:
 - request:
     method: post
-    uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
-    body:
-      encoding: UTF-8
-      string: "&id=10000166"
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Thu, 02 Jun 2016 22:13:05 GMT
-      Server:
-      - Apache
-      Access-Control-Allow-Origin:
-      - "*"
-      Cache-Control:
-      - private
-      Ncbi-Sid:
-      - 9DFD61A2750AF711_0160SID
-      Content-Type:
-      - text/xml; charset=UTF-8
-      Set-Cookie:
-      - ncbi_sid=9DFD61A2750AF711_0160SID; domain=.nih.gov; path=/; expires=Fri, 02
-        Jun 2017 22:13:05 GMT
-      X-Ua-Compatible:
-      - IE=Edge
-      Transfer-Encoding:
-      - chunked
-    body:
-      encoding: UTF-8
-      string: |
-        <?xml version="1.0"?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2016//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
-        <PubmedArticleSet>
-        <PubmedArticle>
-            <MedlineCitation Status="Publisher" Owner="NLM">
-                <PMID Version="1">10000166</PMID>
-                <DateCreated>
-                    <Year>1999</Year>
-                    <Month>02</Month>
-                    <Day>17</Day>
-                </DateCreated>
-                <Article PubModel="Print">
-                    <Journal>
-                        <ISSN IssnType="Print">0163-1829</ISSN>
-                        <JournalIssue CitedMedium="Print">
-                            <Volume>45</Volume>
-                            <Issue>1</Issue>
-                            <PubDate>
-                                <Year>1992</Year>
-                                <Month>Jan</Month>
-                                <Day>1</Day>
-                            </PubDate>
-                        </JournalIssue>
-                        <Title>Physical review. B, Condensed matter</Title>
-                        <ISOAbbreviation>Phys. Rev., B Condens. Matter</ISOAbbreviation>
-                    </Journal>
-                    <ArticleTitle>Fluid permeability in porous media: Comparison of electrical estimates with hydrodynamical calculations.</ArticleTitle>
-                    <Pagination>
-                        <MedlinePgn>186-195</MedlinePgn>
-                    </Pagination>
-                    <AuthorList CompleteYN="Y">
-                        <Author ValidYN="Y">
-                            <LastName>Kostek</LastName>
-                            <Initials>S</Initials>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Schwartz</LastName>
-                            <Initials>LM</Initials>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Johnson</LastName>
-                            <Initials>DL</Initials>
-                        </Author>
-                    </AuthorList>
-                    <Language>ENG</Language>
-                    <PublicationTypeList>
-                        <PublicationType UI="">JOURNAL ARTICLE</PublicationType>
-                    </PublicationTypeList>
-                </Article>
-                <MedlineJournalInfo>
-                    <Country/>
-                    <MedlineTA>Phys Rev B Condens Matter</MedlineTA>
-                    <NlmUniqueID>9878217</NlmUniqueID>
-                    <ISSNLinking>0163-1829</ISSNLinking>
-                </MedlineJournalInfo>
-            </MedlineCitation>
-            <PubmedData>
-                <History>
-                    <PubMedPubDate PubStatus="pubmed">
-                        <Year>1992</Year>
-                        <Month>1</Month>
-                        <Day>1</Day>
-                        <Hour>0</Hour>
-                        <Minute>0</Minute>
-                    </PubMedPubDate>
-                    <PubMedPubDate PubStatus="medline">
-                        <Year>1999</Year>
-                        <Month>2</Month>
-                        <Day>19</Day>
-                        <Hour>0</Hour>
-                        <Minute>0</Minute>
-                    </PubMedPubDate>
-                    <PubMedPubDate PubStatus="entrez">
-                        <Year>1992</Year>
-                        <Month>1</Month>
-                        <Day>1</Day>
-                        <Hour>0</Hour>
-                        <Minute>0</Minute>
-                    </PubMedPubDate>
-                </History>
-                <PublicationStatus>ppublish</PublicationStatus>
-                <ArticleIdList>
-                    <ArticleId IdType="pubmed">10000166</ArticleId>
-                </ArticleIdList>
-            </PubmedData>
-        </PubmedArticle>
-
-        </PubmedArticleSet>
-    http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:13:06 GMT
-- request:
-    method: post
     uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
       encoding: UTF-8
       string: "&id=&id=10000166"
     headers:
       User-Agent:
-      - Faraday v0.9.2
+      - Faraday v0.13.1
       Accept:
       - "*/*"
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 10 Nov 2016 18:40:42 GMT
+      - Mon, 13 Nov 2017 20:57:52 GMT
       Content-Type:
       - application/x-www-form-urlencoded
   response:
@@ -153,30 +23,26 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 10 Nov 2016 18:40:38 GMT
+      - Mon, 13 Nov 2017 20:58:46 GMT
       Server:
       - Apache
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains; preload
       Content-Security-Policy:
       - upgrade-insecure-requests
-      Content-Security-Policy-Report-Only:
-      - 'default-src https:; script-src https: ''unsafe-inline'' ''unsafe-eval'';
-        font-src https: data:; img-src https: data:; style-src https: ''unsafe-inline'';
-        report-uri https://www.ncbi.nlm.nih.gov/corecgi/csp/csp.cgi'
       Access-Control-Allow-Origin:
       - "*"
       Cache-Control:
       - private
       Ncbi-Phid:
-      - 990C2A28824B33810000000003B303A1
+      - 03EDCE32A0A03C610000000001490144
       Ncbi-Sid:
-      - 990C2A28824BF261_0947SID
+      - 03EDCE32A0A07861_0329SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=990C2A28824BF261_0947SID; domain=.nih.gov; path=/; expires=Fri, 10
-        Nov 2017 18:40:38 GMT
+      - ncbi_sid=03EDCE32A0A07861_0329SID; domain=.nih.gov; path=/; expires=Tue, 13
+        Nov 2018 20:58:46 GMT
       Vary:
       - Accept-Encoding
       Content-Encoding:
@@ -186,24 +52,24 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       Content-Length:
-      - '1002'
+      - '993'
     body:
       encoding: UTF-8
-      string: |
+      string: |-
         <?xml version="1.0" ?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2016//EN" "https://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2017//EN" "https://dtd.nlm.nih.gov/ncbi/pubmed/out/pubmed_170101.dtd">
         <PubmedArticleSet>
         <PubmedArticle>
             <MedlineCitation Status="Publisher" Owner="NLM">
                 <PMID Version="1">10000166</PMID>
                 <DateCreated>
                     <Year>1999</Year>
-                    <Month>2</Month>
+                    <Month>02</Month>
                     <Day>17</Day>
                 </DateCreated>
                 <DateRevised>
                     <Year>1999</Year>
-                    <Month>2</Month>
+                    <Month>02</Month>
                     <Day>17</Day>
                 </DateRevised>
                 <Article PubModel="Print">
@@ -215,7 +81,7 @@ http_interactions:
                             <PubDate>
                                 <Year>1992</Year>
                                 <Month>Jan</Month>
-                                <Day>1</Day>
+                                <Day>01</Day>
                             </PubDate>
                         </JournalIssue>
                         <Title>Physical review. B, Condensed matter</Title>
@@ -239,9 +105,9 @@ http_interactions:
                             <Initials>DL</Initials>
                         </Author>
                     </AuthorList>
-                    <Language>ENG</Language>
+                    <Language>eng</Language>
                     <PublicationTypeList>
-                        <PublicationType UI="">JOURNAL ARTICLE</PublicationType>
+                        <PublicationType UI="D016428">Journal Article</PublicationType>
                     </PublicationTypeList>
                 </Article>
                 <MedlineJournalInfo>
@@ -284,5 +150,5 @@ http_interactions:
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Thu, 10 Nov 2016 18:40:43 GMT
+  recorded_at: Mon, 13 Nov 2017 20:57:52 GMT
 recorded_with: VCR 3.0.1
