--- a/fixtures/vcr_cassettes/ScienceWireClient/_get_full_sciencewire_pubs_for_wos_ids/returns_a_Nokogiri_XML_Document_containing_all_SW_pubs_when_passed_an_array_of_WebOfScience_ids.yml
+++ b/fixtures/vcr_cassettes/ScienceWireClient/_get_full_sciencewire_pubs_for_wos_ids/returns_a_Nokogiri_XML_Document_containing_all_SW_pubs_when_passed_an_array_of_WebOfScience_ids.yml
@@ -35,13 +35,13 @@ http_interactions:
             </ScienceWireQueryXMLParameter>
     headers:
       User-Agent:
-      - Faraday v0.9.2
+      - Faraday v0.13.1
       Accept:
       - "*/*"
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:12:01 GMT
+      - Mon, 13 Nov 2017 20:59:08 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -70,7 +70,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 22:12:02 GMT
+      - Mon, 13 Nov 2017 21:00:02 GMT
       Content-Length:
       - '277'
     body:
@@ -79,7 +79,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>81941</queryID>\r\n
         \ <queryResultRows>3</queryResultRows>\r\n  <totalRows>3</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:12:02 GMT
+  recorded_at: Mon, 13 Nov 2017 20:59:08 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/81941?format=xml&page=0&pageSize=3&v=version/4
@@ -88,13 +88,13 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Faraday v0.9.2
+      - Faraday v0.13.1
       Accept:
       - "*/*"
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:12:02 GMT
+      - Mon, 13 Nov 2017 20:59:08 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -123,9 +123,9 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 22:12:02 GMT
+      - Mon, 13 Nov 2017 21:00:02 GMT
       Content-Length:
-      - '9645'
+      - '9665'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
@@ -155,7 +155,7 @@ http_interactions:
         \   <AuthorCount>4</AuthorCount>\r\n    <KeywordList>DENSITY|KINETICS|MODELS|MOLECULAR-DYNAMICS|PROTEINS</KeywordList>\r\n
         \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
         Document</DocumentCategory>\r\n    <NumberOfReferences>31</NumberOfReferences>\r\n
-        \   <TimesCited>3</TimesCited>\r\n    <TimesNotSelfCited>3</TimesNotSelfCited>\r\n
+        \   <TimesCited>5</TimesCited>\r\n    <TimesNotSelfCited>5</TimesNotSelfCited>\r\n
         \   <PMID>23565139</PMID>\r\n    <WoSItemID>000317717300006</WoSItemID>\r\n
         \   <PublicationSourceTitle>PLOS ONE</PublicationSourceTitle>\r\n    <Volume>8</Volume>\r\n
         \   <Issue>4</Issue>\r\n    <Pagination />\r\n    <PublicationDate>2013-04-02T00:00:00</PublicationDate>\r\n
@@ -169,7 +169,7 @@ http_interactions:
         LIBRARY SCIENCE</CopyrightPublisher>\r\n    <CopyrightCity>SAN FRANCISCO</CopyrightCity>\r\n
         \   <ArticleNumber>e58699</ArticleNumber>\r\n    <PublicationImpactFactorList>3.534,2013,ExactPublicationYear|3.534,2013,MostRecentYear</PublicationImpactFactorList>\r\n
         \   <PublicationCategoryRankingList>8/55;MULTIDISCIPLINARY SCIENCES;2013;SC;ExactPublicationYear|8/55;MULTIDISCIPLINARY
-        SCIENCES;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,0,3|2,0,3|3,0,3|4,0,3</AuthorCitationCountList>\r\n
+        SCIENCES;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n    <AuthorCitationCountList>1,0,5|2,0,5|3,0,5|4,0,5</AuthorCitationCountList>\r\n
         \   <CopyrightStateProvince>CA</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>62856137</PublicationItemID>\r\n    <Title>Emergence
@@ -186,7 +186,7 @@ http_interactions:
         \   <AuthorCount>3</AuthorCount>\r\n    <KeywordList>TRAJECTORIES|TRANSITION|KINETICS</KeywordList>\r\n
         \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
         Document</DocumentCategory>\r\n    <NumberOfReferences>20</NumberOfReferences>\r\n
-        \   <TimesCited>18</TimesCited>\r\n    <TimesNotSelfCited>11</TimesNotSelfCited>\r\n
+        \   <TimesCited>26</TimesCited>\r\n    <TimesNotSelfCited>18</TimesNotSelfCited>\r\n
         \   <PMID>23540906</PMID>\r\n    <WoSItemID>000317872800004</WoSItemID>\r\n
         \   <PublicationSourceTitle>JOURNAL OF THE AMERICAN CHEMICAL SOCIETY</PublicationSourceTitle>\r\n
         \   <Volume>135</Volume>\r\n    <Issue>15</Issue>\r\n    <Pagination>5501-5504</Pagination>\r\n
@@ -201,7 +201,7 @@ http_interactions:
         \   <PublicationImpactFactorList>11.444,2013,ExactPublicationYear|11.444,2013,MostRecentYear</PublicationImpactFactorList>\r\n
         \   <PublicationCategoryRankingList>10/148;CHEMISTRY, MULTIDISCIPLINARY;2013;SC;ExactPublicationYear|10/148;CHEMISTRY,
         MULTIDISCIPLINARY;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
-        \   <AuthorCitationCountList>1,5,13|2,3,15|3,5,13</AuthorCitationCountList>\r\n
+        \   <AuthorCitationCountList>1,5,21|2,4,22|3,5,21</AuthorCitationCountList>\r\n
         \   <CopyrightStateProvince>DC</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>62922945</PublicationItemID>\r\n    <Title>Functional
@@ -227,12 +227,12 @@ http_interactions:
         \   <PublicationSourceTitle>JOURNAL OF CHEMICAL PHYSICS</PublicationSourceTitle>\r\n
         \   <Volume>138</Volume>\r\n    <Issue>16</Issue>\r\n    <Pagination />\r\n
         \   <PublicationDate>2013-04-28T00:00:00</PublicationDate>\r\n    <PublicationYear>2013</PublicationYear>\r\n
-        \   <PublicationType>Journal</PublicationType>\r\n    <PublicationSubjectCategoryList>Physics,
-        Atomic, Molecular &amp; Chemical</PublicationSubjectCategoryList>\r\n    <ISSN>0021-9606</ISSN>\r\n
-        \   <DOI>10.1063/1.4801942</DOI>\r\n    <ConferenceStartDate xsi:nil=\"true\"
-        />\r\n    <ConferenceEndDate xsi:nil=\"true\" />\r\n    <Rank xsi:nil=\"true\"
-        />\r\n    <OrdinalRank>2</OrdinalRank>\r\n    <NormalizedRank xsi:nil=\"true\"
-        />\r\n    <NewPublicationItemID xsi:nil=\"true\" />\r\n    <IsObsolete>false</IsObsolete>\r\n
+        \   <PublicationType>Journal</PublicationType>\r\n    <PublicationSubjectCategoryList>Chemistry,
+        Physical|Physics, Atomic, Molecular &amp; Chemical</PublicationSubjectCategoryList>\r\n
+        \   <ISSN>0021-9606</ISSN>\r\n    <DOI>10.1063/1.4801942</DOI>\r\n    <ConferenceStartDate
+        xsi:nil=\"true\" />\r\n    <ConferenceEndDate xsi:nil=\"true\" />\r\n    <Rank
+        xsi:nil=\"true\" />\r\n    <OrdinalRank>2</OrdinalRank>\r\n    <NormalizedRank
+        xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\" />\r\n    <IsObsolete>false</IsObsolete>\r\n
         \   <CopyrightPublisher>AMER INST PHYSICS</CopyrightPublisher>\r\n    <CopyrightCity>MELVILLE</CopyrightCity>\r\n
         \   <ArticleNumber>165101</ArticleNumber>\r\n    <PublicationImpactFactorList>3.122,2013,ExactPublicationYear|3.122,2013,MostRecentYear</PublicationImpactFactorList>\r\n
         \   <PublicationCategoryRankingList>8/33;PHYSICS, ATOMIC, MOLECULAR &amp;
@@ -241,5 +241,5 @@ http_interactions:
         \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:12:02 GMT
+  recorded_at: Mon, 13 Nov 2017 20:59:09 GMT
 recorded_with: VCR 3.0.1
