--- a/fixtures/vcr_cassettes/ScienceWireClient/_query_sciencewire_by_author_name/with_uncommon_last_name_first_name_and_max_rows_4/returns_an_empty_array.yml
+++ b/fixtures/vcr_cassettes/ScienceWireClient/_query_sciencewire_by_author_name/with_uncommon_last_name_first_name_and_max_rows_4/returns_an_empty_array.yml
@@ -10,14 +10,13 @@ http_interactions:
         \                        <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
         xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n              <Criterion>\n
         \               <Criteria>\n                              <Criterion>\n              <TextSearch>\n
-        \               <QueryPredicate>\"ottawa,\" or \"OTTAWA,\" or \"OTTAWA,Y\"</QueryPredicate>\n
+        \               <QueryPredicate>\"Ottawa,\" or \"Ottawa,,Yukon\" or \"Ottawa,,Y\"</QueryPredicate>\n
         \               <SearchType>ExactMatch</SearchType>\n                <Columns>AggregateText</Columns>\n
         \               <MaximumRows>4</MaximumRows>\n              </TextSearch>\n
-        \           </Criterion>\n\n                                <Criterion>\n
-        \               <Filter>\n                  <Column>AuthorLastName</Column>\n
-        \                 <Operator>BeginsWith</Operator>\n                  <Value>OTTAWA</Value>\n
-        \               </Filter>\n              </Criterion>\n\n                  \n
-        \                 \n                  \n                              <Criterion>\n
+        \           </Criterion>\n\n                              <Criterion>\n              <Filter>\n
+        \               <Column>AuthorLastName</Column>\n                <Operator>BeginsWith</Operator>\n
+        \               <Value>OTTAWA</Value>\n              </Filter>\n            </Criterion>\n\n
+        \                 \n                  \n                  \n                              <Criterion>\n
         \             <Filter>\n                <Column>DocumentCategory</Column>\n
         \               <Operator>In</Operator>\n                <Values>\n                  <Value>Journal
         Document</Value>\n                  <Value>Conference Proceeding Document</Value>\n
@@ -28,13 +27,13 @@ http_interactions:
         \           </query>\n\n            ]]>\n</xmlQuery>\n    </ScienceWireQueryXMLParameter>"
     headers:
       User-Agent:
-      - Faraday v0.9.2
+      - Faraday v0.13.1
       Accept:
       - "*/*"
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:12:00 GMT
+      - Mon, 13 Nov 2017 20:59:38 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -63,14 +62,14 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 15:53:32 GMT
+      - Mon, 13 Nov 2017 21:00:32 GMT
       Content-Length:
       - '278'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>242198</queryID>\r\n
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>263023</queryID>\r\n
         \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:12:01 GMT
+  recorded_at: Mon, 13 Nov 2017 20:59:38 GMT
 recorded_with: VCR 3.0.1
