--- a/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_existing_pubmed_pub/updates_an_existing_pubmed_publication_with_sciencewire_data.yml
+++ b/fixtures/vcr_cassettes/ScienceWireHarvester/_harvest_pubs_for_author_ids/when_existing_pubmed_pub/updates_an_existing_pubmed_publication_with_sciencewire_data.yml
@@ -8,13 +8,13 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Faraday v0.9.2
+      - Faraday v0.13.1
       Accept:
       - "*/*"
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:10:59 GMT
+      - Mon, 13 Nov 2017 20:58:10 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -43,7 +43,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 15:53:32 GMT
+      - Mon, 13 Nov 2017 20:59:05 GMT
       Content-Length:
       - '2075'
     body:
@@ -74,52 +74,68 @@ http_interactions:
         />\r\n    <NewPublicationItemID>42711845</NewPublicationItemID>\r\n    <IsObsolete>false</IsObsolete>\r\n
         \   <CopyrightPublisher />\r\n    <CopyrightCity />\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:11:00 GMT
+  recorded_at: Mon, 13 Nov 2017 20:58:11 GMT
 - request:
     method: post
-    uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
       encoding: UTF-8
-      string: "&id=10048354"
+      string: "&id=&id=10048354"
     headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      User-Agent:
+      - Faraday v0.13.1
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Mon, 13 Nov 2017 20:58:11 GMT
+      Content-Type:
+      - application/x-www-form-urlencoded
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Thu, 02 Jun 2016 22:11:00 GMT
+      - Mon, 13 Nov 2017 20:59:05 GMT
       Server:
       - Apache
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
       Access-Control-Allow-Origin:
       - "*"
       Cache-Control:
       - private
+      Ncbi-Phid:
+      - 990C3385A09FFB710000000002CF02C6
       Ncbi-Sid:
-      - 9DFC2177750AEF41_0611SID
+      - 990C3385A0A07991_0719SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=9DFC2177750AEF41_0611SID; domain=.nih.gov; path=/; expires=Fri, 02
-        Jun 2017 22:11:00 GMT
+      - ncbi_sid=990C3385A0A07991_0719SID; domain=.nih.gov; path=/; expires=Tue, 13
+        Nov 2018 20:59:05 GMT
+      Vary:
+      - Accept-Encoding
+      Content-Encoding:
+      - gzip
       X-Ua-Compatible:
       - IE=Edge
-      Transfer-Encoding:
-      - chunked
+      X-Xss-Protection:
+      - 1; mode=block
+      Content-Length:
+      - '1709'
     body:
       encoding: UTF-8
-      string: |
-        <?xml version="1.0"?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2016//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
+      string: |-
+        <?xml version="1.0" ?>
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2017//EN" "https://dtd.nlm.nih.gov/ncbi/pubmed/out/pubmed_170101.dtd">
         <PubmedArticleSet>
         <PubmedArticle>
-            <MedlineCitation Owner="NLM" Status="MEDLINE">
+            <MedlineCitation Status="MEDLINE" Owner="NLM">
                 <PMID Version="1">10048354</PMID>
                 <DateCreated>
                     <Year>1999</Year>
@@ -178,209 +194,6 @@ http_interactions:
                         </Author>
                     </AuthorList>
                     <Language>eng</Language>
-                    <PublicationTypeList>
-                        <PublicationType UI="D002363">Case Reports</PublicationType>
-                        <PublicationType UI="D016428">Journal Article</PublicationType>
-                        <PublicationType UI="D016454">Review</PublicationType>
-                    </PublicationTypeList>
-                </Article>
-                <MedlineJournalInfo>
-                    <Country>UNITED STATES</Country>
-                    <MedlineTA>Am J Orthop (Belle Mead NJ)</MedlineTA>
-                    <NlmUniqueID>9502918</NlmUniqueID>
-                    <ISSNLinking>1078-4519</ISSNLinking>
-                </MedlineJournalInfo>
-                <CitationSubset>IM</CitationSubset>
-                <MeshHeadingList>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D003131">Combined Modality Therapy</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D005260">Female</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D005627">Frostbite</DescriptorName>
-                        <QualifierName MajorTopicYN="Y" UI="Q000175">diagnosis</QualifierName>
-                        <QualifierName MajorTopicYN="N" UI="Q000188">drug therapy</QualifierName>
-                        <QualifierName MajorTopicYN="N" UI="Q000503">physiopathology</QualifierName>
-                        <QualifierName MajorTopicYN="Y" UI="Q000601">surgery</QualifierName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D006801">Humans</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D015601">Injury Severity Score</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D008297">Male</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D008875">Middle Aged</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="Y" UI="D019637">Orthopedic Procedures</DescriptorName>
-                    </MeshHeading>
-                    <MeshHeading>
-                        <DescriptorName MajorTopicYN="N" UI="D011379">Prognosis</DescriptorName>
-                    </MeshHeading>
-                </MeshHeadingList>
-                <NumberOfReferences>44</NumberOfReferences>
-            </MedlineCitation>
-            <PubmedData>
-                <History>
-                    <PubMedPubDate PubStatus="pubmed">
-                        <Year>1999</Year>
-                        <Month>2</Month>
-                        <Day>27</Day>
-                    </PubMedPubDate>
-                    <PubMedPubDate PubStatus="medline">
-                        <Year>1999</Year>
-                        <Month>2</Month>
-                        <Day>27</Day>
-                        <Hour>0</Hour>
-                        <Minute>1</Minute>
-                    </PubMedPubDate>
-                    <PubMedPubDate PubStatus="entrez">
-                        <Year>1999</Year>
-                        <Month>2</Month>
-                        <Day>27</Day>
-                        <Hour>0</Hour>
-                        <Minute>0</Minute>
-                    </PubMedPubDate>
-                </History>
-                <PublicationStatus>ppublish</PublicationStatus>
-                <ArticleIdList>
-                    <ArticleId IdType="pubmed">10048354</ArticleId>
-                </ArticleIdList>
-            </PubmedData>
-        </PubmedArticle>
-
-        </PubmedArticleSet>
-    http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:11:00 GMT
-- request:
-    method: post
-    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
-    body:
-      encoding: UTF-8
-      string: "&id=&id=10048354"
-    headers:
-      User-Agent:
-      - Faraday v0.9.2
-      Accept:
-      - "*/*"
-      Accept-Encoding:
-      - gzip,deflate
-      Date:
-      - Thu, 10 Nov 2016 18:41:00 GMT
-      Content-Type:
-      - application/x-www-form-urlencoded
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Thu, 10 Nov 2016 18:40:56 GMT
-      Server:
-      - Apache
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubDomains; preload
-      Content-Security-Policy:
-      - upgrade-insecure-requests
-      Content-Security-Policy-Report-Only:
-      - 'default-src https:; script-src https: ''unsafe-inline'' ''unsafe-eval'';
-        font-src https: data:; img-src https: data:; style-src https: ''unsafe-inline'';
-        report-uri https://www.ncbi.nlm.nih.gov/corecgi/csp/csp.cgi'
-      Access-Control-Allow-Origin:
-      - "*"
-      Cache-Control:
-      - private
-      Ncbi-Phid:
-      - 03EE9D2A824B4F4100000000030602FD
-      Ncbi-Sid:
-      - 03EE9D2A824BF381_0774SID
-      Content-Type:
-      - text/xml; charset=UTF-8
-      Set-Cookie:
-      - ncbi_sid=03EE9D2A824BF381_0774SID; domain=.nih.gov; path=/; expires=Fri, 10
-        Nov 2017 18:40:56 GMT
-      Vary:
-      - Accept-Encoding
-      Content-Encoding:
-      - gzip
-      X-Ua-Compatible:
-      - IE=Edge
-      X-Xss-Protection:
-      - 1; mode=block
-      Content-Length:
-      - '1720'
-    body:
-      encoding: UTF-8
-      string: |
-        <?xml version="1.0" ?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2016//EN" "https://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
-        <PubmedArticleSet>
-        <PubmedArticle>
-            <MedlineCitation Status="MEDLINE" Owner="NLM">
-                <PMID Version="1">10048354</PMID>
-                <DateCreated>
-                    <Year>1999</Year>
-                    <Month>4</Month>
-                    <Day>22</Day>
-                </DateCreated>
-                <DateCompleted>
-                    <Year>1999</Year>
-                    <Month>04</Month>
-                    <Day>22</Day>
-                </DateCompleted>
-                <DateRevised>
-                    <Year>2010</Year>
-                    <Month>1</Month>
-                    <Day>5</Day>
-                </DateRevised>
-                <Article PubModel="Print">
-                    <Journal>
-                        <ISSN IssnType="Print">1078-4519</ISSN>
-                        <JournalIssue CitedMedium="Print">
-                            <Volume>28</Volume>
-                            <Issue>1</Issue>
-                            <PubDate>
-                                <Year>1999</Year>
-                                <Month>Jan</Month>
-                            </PubDate>
-                        </JournalIssue>
-                        <Title>American journal of orthopedics (Belle Mead, N.J.)</Title>
-                        <ISOAbbreviation>Am J. Orthop.</ISOAbbreviation>
-                    </Journal>
-                    <ArticleTitle>Frostbite: an orthopedic perspective.</ArticleTitle>
-                    <Pagination>
-                        <MedlinePgn>21-6</MedlinePgn>
-                    </Pagination>
-                    <Abstract>
-                        <AbstractText>Frostbite injury to the extremities has the potential for disastrous effects. This review provides information valuable to the orthopedic surgeon to aid in the evaluation and treatment of frostbite. The pathophysiology and predisposing factors that provide a basic understanding of the nature of frostbite are discussed. Accepted and experimental imaging studies and treatment options are also reviewed. An effort is made to give the orthopedic perspective on each issue, providing a valuable resource for all orthopedic surgeons involved in the care of the patient with frostbite.</AbstractText>
-                    </Abstract>
-                    <AuthorList CompleteYN="Y">
-                        <Author ValidYN="Y">
-                            <LastName>McAdams</LastName>
-                            <ForeName>T R</ForeName>
-                            <Initials>TR</Initials>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Orthopaedics and Rehabilitation, University of New Mexico, Albuquerque, USA.</Affiliation>
-                            </AffiliationInfo>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Swenson</LastName>
-                            <ForeName>D R</ForeName>
-                            <Initials>DR</Initials>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Miller</LastName>
-                            <ForeName>R A</ForeName>
-                            <Initials>RA</Initials>
-                        </Author>
-                    </AuthorList>
-                    <Language>ENG</Language>
                     <PublicationTypeList>
                         <PublicationType UI="D002363">Case Reports</PublicationType>
                         <PublicationType UI="D016428">Journal Article</PublicationType>
@@ -460,5 +273,5 @@ http_interactions:
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Thu, 10 Nov 2016 18:41:00 GMT
+  recorded_at: Mon, 13 Nov 2017 20:58:11 GMT
 recorded_with: VCR 3.0.1
