--- a/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_pmid/returns_one_document.yml
+++ b/fixtures/vcr_cassettes/SulBib_API/GET_/publications/sourcelookup_/_pmid/returns_one_document.yml
@@ -31,13 +31,13 @@ http_interactions:
             </ScienceWireQueryXMLParameter>
     headers:
       User-Agent:
-      - Faraday v0.9.2
+      - Faraday v0.13.1
       Accept:
       - "*/*"
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:12:54 GMT
+      - Mon, 13 Nov 2017 20:56:53 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,7 +66,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 22:12:54 GMT
+      - Mon, 13 Nov 2017 20:57:48 GMT
       Content-Length:
       - '278'
     body:
@@ -75,7 +75,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>142975</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:12:54 GMT
+  recorded_at: Mon, 13 Nov 2017 20:56:54 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/142975?format=xml&page=0&pageSize=1&v=version/4
@@ -84,13 +84,13 @@ http_interactions:
       string: ''
     headers:
       User-Agent:
-      - Faraday v0.9.2
+      - Faraday v0.13.1
       Accept:
       - "*/*"
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 02 Jun 2016 22:12:54 GMT
+      - Mon, 13 Nov 2017 20:56:54 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -119,9 +119,9 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Thu, 02 Jun 2016 15:53:32 GMT
+      - Mon, 13 Nov 2017 20:57:48 GMT
       Content-Length:
-      - '1881'
+      - '1879'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
@@ -133,7 +133,7 @@ http_interactions:
         Article</DocumentTypeList>\r\n    <DocumentCategory>Journal Document</DocumentCategory>\r\n
         \   <NumberOfReferences xsi:nil=\"true\" />\r\n    <TimesCited xsi:nil=\"true\"
         />\r\n    <TimesNotSelfCited xsi:nil=\"true\" />\r\n    <PMID>24196758</PMID>\r\n
-        \   <PublicationSourceTitle>Archivos argentinos de pediatri´a</PublicationSourceTitle>\r\n
+        \   <PublicationSourceTitle>Archivos argentinos de pediatria</PublicationSourceTitle>\r\n
         \   <Volume>111</Volume>\r\n    <Issue>6</Issue>\r\n    <Pagination>468-471</Pagination>\r\n
         \   <PublicationDate>2013-12-01T00:00:00</PublicationDate>\r\n    <PublicationYear>2013</PublicationYear>\r\n
         \   <PublicationSubjectCategoryList />\r\n    <ISSN>0325-0075</ISSN>\r\n    <DOI>10.1590/S0325-00752013000600003</DOI>\r\n
@@ -146,5 +146,5 @@ http_interactions:
         \   <CopyrightStateProvince />\r\n    <CopyrightCountry>ARGENTINA</CopyrightCountry>\r\n
         \ </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:12:55 GMT
+  recorded_at: Mon, 13 Nov 2017 20:56:54 GMT
 recorded_with: VCR 3.0.1
