--- a/fixtures/vcr_cassettes/pub_med_client_spec_returns_an_empty_array.yml
+++ b/fixtures/vcr_cassettes/pub_med_client_spec_returns_an_empty_array.yml
@@ -2,68 +2,19 @@
 http_interactions:
 - request:
     method: post
-    uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
-    body:
-      encoding: UTF-8
-      string: "&id=233333333333333&id=45555666666666"
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Thu, 02 Jun 2016 22:11:16 GMT
-      Server:
-      - Apache
-      Access-Control-Allow-Origin:
-      - "*"
-      Cache-Control:
-      - private
-      Ncbi-Sid:
-      - 08DE1E7C750AF041_0156SID
-      Content-Type:
-      - text/xml; charset=UTF-8
-      Set-Cookie:
-      - ncbi_sid=08DE1E7C750AF041_0156SID; domain=.nih.gov; path=/; expires=Fri, 02
-        Jun 2017 22:11:16 GMT
-      X-Ua-Compatible:
-      - IE=Edge
-      Transfer-Encoding:
-      - chunked
-    body:
-      encoding: UTF-8
-      string: |
-        <?xml version="1.0"?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2016//EN" "http://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
-        <PubmedArticleSet>
-
-        </PubmedArticleSet>
-    http_version: 
-  recorded_at: Thu, 02 Jun 2016 22:11:17 GMT
-- request:
-    method: post
     uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
     body:
       encoding: UTF-8
       string: "&id=233333333333333&id=45555666666666"
     headers:
       User-Agent:
-      - Faraday v0.9.2
+      - Faraday v0.13.1
       Accept:
       - "*/*"
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Thu, 20 Oct 2016 21:46:39 GMT
-      Host:
-      - eutils.ncbi.nlm.nih.gov
+      - Mon, 13 Nov 2017 20:57:38 GMT
       Content-Type:
       - application/x-www-form-urlencoded
   response:
@@ -72,30 +23,26 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 20 Oct 2016 21:46:39 GMT
+      - Mon, 13 Nov 2017 20:58:32 GMT
       Server:
       - Apache
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains; preload
       Content-Security-Policy:
       - upgrade-insecure-requests
-      Content-Security-Policy-Report-Only:
-      - 'default-src https:; script-src https: ''unsafe-inline'' ''unsafe-eval'';
-        font-src https: data:; img-src https: data:; style-src https: ''unsafe-inline'';
-        report-uri https://www.ncbi.nlm.nih.gov/corecgi/csp/csp.cgi'
       Access-Control-Allow-Origin:
       - "*"
       Cache-Control:
       - private
       Ncbi-Phid:
-      - 990D9F09809345610000000003380327
+      - 03EDCE32A0A03C61000000000144013F
       Ncbi-Sid:
-      - 990D9F098093B3F1_0824SID
+      - 03EDCE32A0A07781_0324SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=990D9F098093B3F1_0824SID; domain=.nih.gov; path=/; expires=Fri, 20
-        Oct 2017 21:46:39 GMT
+      - ncbi_sid=03EDCE32A0A07781_0324SID; domain=.nih.gov; path=/; expires=Tue, 13
+        Nov 2018 20:58:32 GMT
       Vary:
       - Accept-Encoding
       Content-Encoding:
@@ -105,15 +52,15 @@ http_interactions:
       X-Xss-Protection:
       - 1; mode=block
       Content-Length:
-      - '185'
+      - '177'
     body:
       encoding: UTF-8
-      string: |
+      string: |-
         <?xml version="1.0" ?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2016//EN" "https://www.ncbi.nlm.nih.gov/corehtml/query/DTD/pubmed_160101.dtd">
+        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2017//EN" "https://dtd.nlm.nih.gov/ncbi/pubmed/out/pubmed_170101.dtd">
         <PubmedArticleSet>
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Thu, 20 Oct 2016 21:46:39 GMT
+  recorded_at: Mon, 13 Nov 2017 20:57:38 GMT
 recorded_with: VCR 3.0.1
