Fix #503: remove find_or_create_by_sciencewire_id
Rubocop exception for `local` factories.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,7 @@ AllCops:
     - 'bin/**/*'
     - 'db/**/*'
     - 'config/**/*'
+    - 'spec/factories/*.local.rb'
     - 'spec/fixtures/**/*'
     - 'spec/spec_helper.rb'
     - 'spec/teaspoon_env.rb'
