Rework Agent::AuthorName and spec
Added `text_search_terms`, which gets back Array of Strings instead of
composed query string with internally double-quoted clauses.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,6 +23,10 @@ Lint/AmbiguousBlockAssociation:
   Exclude:
     - "spec/**/*"
 
+Lint/PercentStringArray:
+  Exclude:
+    - "spec/lib/web_of_science/query_author_spec.rb" # specifically testing quoted clauses w/in strings
+
 Style/VariableName:
   Enabled: false
 
